tests/baselines/reference/importHelpersNoModule.errors.txt
tests/cases/compiler/external.ts(1,1): error TS2307: Cannot find module 'tslib'.


==== tests/cases/compiler/external.ts (1 errors) ====
    export class A { }
    ~~~~~~
!!! error TS2307: Cannot find module 'tslib'.
    export class B extends A { }
    
    declare var dec: any;
    
    @dec
    class C {
        method(@dec x: number) {
        }
    }
    
==== tests/cases/compiler/script.ts (0 errors) ====
    class A { }
    class B extends A { }
    
    declare var dec: any;
    
    @dec
    class C {
        method(@dec x: number) {
        }
    }
    